--- a/public/index.html
+++ b/public/index.html
@@ -15,24 +15,66 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   </head>
   <body ng-controller="VideoGameController as game">
-    <!-- <h1>Test please ignore</h1> -->
-    <!-- {{2 + 2}} -->
-    <!-- {{game.test}} -->
+    <div class="main">
+      <!-- <h1>Test please ignore</h1>
+      {{2 + 2}}
+      {{game.test}} -->
 
-    <!-- test game.getGames() -->
-    <div>
-      <button ng-click="game.getGames()" type="submit">get games</button>
+      <!-- test game.getGames() -->
+      <div>
+        test get button
+        <button ng-click="game.getGames()" type="submit">get games</button>
 
-      <ul>
-        <li ng-repeat="games in game.gamesRecived"></li>
-      </ul>
+        <ul>
+          <li ng-repeat="games in game.gamesRecived"></li>
+        </ul>
+      </div>
+
+      <!-- navbar -->
+      <div>
+        <ul>
+          <li>home</li>
+          <li>other1</li>
+          <li>other2</li>
+          <li>other3</li>
+          <li>other4</li>
+        </ul>
+        <ul>
+          <li>Sign Up</li>
+          <li>Log In</li>
+        </ul>
+      </div>
+
+      <!-- header -->
+      <div class="header">
+        Images, carousel
+      </div>
+
+      <!-- user sign up / log in section -->
+      <div class="">
+        user sign up / log in section
+      </div>
+
+      <!-- user view section -->
+      <div class="">
+        user view section
+      </div>
+
+      <!-- game search section -->
+      <div class="">
+        game search section
+      </div>
+
+      <!-- game view / comment / like section -->
+      <div class="">
+        game view / comment / like section
+      </div>
+
+      <!-- footer -->
+      <div class="">
+        footer
+      </div>
     </div>
-
-
-
-
-
-
 
     <!-- Optional Bootstrap JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
