created post function for user sign up

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
           <li>Sign Up</li>
           <li>Log In</li>
         </ul>
-      </div>
+      </div> <!-- /.main-navbar -->
 
       <!-- header -->
       <div class="header">
@@ -123,26 +123,14 @@
         footer
       </div>
 
-      <!-- <h1>Test please ignore</h1>
-      {{2 + 2}}
-      {{game.test}} -->
-
-      <!-- test game.getGames() -->
-      <div>
-        test get button
-        <button ng-click="game.getGames()" type="submit">get games</button>
-
-        <ul>
-          <li ng-repeat="games in game.gamesRecived"></li>
-        </ul>
-      </div>
-
     </div> <!-- /.main -->
 
     <!-- Optional Bootstrap JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <!-- Popper.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   </body>
 </html>
