--- a/public/index.html
+++ b/public/index.html
@@ -15,370 +15,12 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   </head>
 
-  <!-- NOTE: Need to fix includes,
-             New data not showing,
-             but being added(user signup, new games).
   <body ng-controller="IncludesController as inc">
-    <div class="main">
-      navigation include
+    <div ng-controller="SessionsController as sess" class="main">
+      <!-- navigation include -->
       <div ng-include="'partials/nav.html'"></div>
-      Dynamically change includes
-      <div ng-include="inc.includePath"></div> -->
-
-  <body ng-controller="SessionsController as sess" id="home">
-    <div class="main">
-      <!-- navbar -->
-      <nav class="navbar fixed-top navbar-expand-md navbar-dark">
-        <!-- <a ng-click="base.changeInclude('header')" class="navbar-brand" href="#">WASD.it</a> -->
-        <a class="navbar-brand" href="#home">WASD.it</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <!-- <a ng-click="base.changeInclude('header')" class="nav-link">home</a> -->
-              <a class="nav-link" href="#home">home</a>
-            </li>
-            <li class="nav-item">
-              <!-- <a ng-click="base.changeInclude('game-view-all')" class="nav-link">games</a> -->
-              <a class="nav-link" href="#game-view-all">games</a>
-            </li>
-            <li class="nav-item">
-              <!-- <a ng-click="base.changeInclude('about')" class="nav-link">about</a> -->
-              <a class="nav-link" href="#about">about</a>
-            </li>
-            <li class="nav-item">
-              <!-- <a ng-click="base.changeInclude('contact')" class="nav-link">contact</a> -->
-              <a class="nav-link" href="#contact">contact</a>
-            </li>
-          </ul>
-          <ul class="navbar-nav">
-            <li ng-if="sess.currentUser" class="nav-item">
-              <!-- <a ng-click="base.changeInclude('user-view')" class="nav-link">profile</a> -->
-              <a class="nav-link" href="#user-view">profile</a>
-            </li>
-            <li ng-if="sess.currentUser" class="nav-item">
-              <!-- <a ng-click="base.changeInclude('game-create')" class="nav-link">add game</a> -->
-              <a class="nav-link" href="#game-create">add game</a>
-            </li>
-            <li ng-if="sess.currentUser" class="nav-item">
-              <!-- <a ng-click="base.changeInclude('game-edit')" class="nav-link">edit game</a> -->
-              <a class="nav-link" href="#game-edit">edit game</a>
-            </li>
-            <li ng-if="sess.currentUser" class="nav-item">
-              <a class="nav-link" href="#">logout</a>
-            </li>
-            <li ng-if="sess.showNavItem" class="nav-item">
-              <!-- <a ng-click="base.changeInclude('session-signup')" class="nav-link">signup</a> -->
-              <a class="nav-link" href="#session-signup">signup</a>
-            </li>
-            <li ng-if="sess.showNavItem" class="nav-item">
-              <!-- <a ng-click="base.changeInclude('session-login')" class="nav-link">login</a> -->
-              <a class="nav-link" href="#session-login">login</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-
-      <!-- header -->
-      <div class="header">
-        <div id="carousel-position" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carousel-position" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-position" data-slide-to="1"></li>
-            <li data-target="#carousel-position" data-slide-to="2"></li>
-            <li data-target="#carousel-position" data-slide-to="3"></li>
-            <li data-target="#carousel-position" data-slide-to="4"></li>
-          </ol>
-          <div class="carousel-inner">
-            <!-- image 1 -->
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="/assets/csgo.png" alt="First slide">
-            </div>
-            <!-- image 2 -->
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/fortnite.jpg" alt="Second slide">
-            </div>
-            <!-- image 3 -->
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/roblox.jpg" alt="Third slide">
-            </div>
-            <!-- image 4 -->
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/skyrim.jpg" alt="Fourth slide">
-            </div>
-            <!-- image 5 -->
-            <div class="carousel-item">
-              <img class="d-block w-100" src="/assets/super-mario.jpg" alt="Fith slide">
-            </div>
-          </div>
-          <!-- left controller -->
-          <a class="carousel-control-prev" href="#carousel-position" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <!-- right controller -->
-          <a class="carousel-control-next" href="#carousel-position" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div> <!-- /.header -->
-
-      <!-- user sign up -->
-      <div class="session-signup" id="session-signup">
-        <div>
-          <div>
-            <h1>signup</h1>
-          </div>
-          <form ng-submit="sess.signup()">
-            <!-- first name -->
-            <div>
-              <input ng-model="sess.signupForm.firstname" autocomplete="off" maxlength="30" minlength="2" placeholder="first name" type="text" required>
-            </div>
-            <!-- last name -->
-            <div>
-              <input ng-model="sess.signupForm.lastname" autocomplete="off" maxlength="30" minlength="2" placeholder="last name" type="text" required>
-            </div>
-            <!-- email -->
-            <div>
-              <input ng-model="sess.signupForm.email" autocomplete="off" maxlength="50" minlength="5" placeholder="email address" type="email" required>
-            </div>
-            <!-- username -->
-            <div>
-              <input ng-model="sess.signupForm.username" autocomplete="off" maxlength="30" minlength="2" placeholder="username" type="text" required>
-            </div>
-            <!-- password -->
-            <div>
-              <input ng-model="sess.signupForm.password" autocomplete="off" maxlength="30" minlength="8" placeholder="password" type="password" required>
-            </div>
-            <!-- submit button -->
-            <button type="submit">submit</button>
-          </form>
-        </div>
-      </div> <!-- /.session-signup -->
-
-      <!-- user log in section -->
-      <div class="session-login" id="session-login">
-        <div>
-          <div>
-            <h1>login</h1>
-          </div>
-          <form ng-submit="sess.login()">
-            <div>
-              <input name="username" ng-model="sess.loginForm.username" type="text" placeholder="username" required>
-            </div>
-            <div>
-              <input name="password" ng-model="sess.loginForm.password" type="password" placeholder="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary">login</button>
-          </form>
-
-          <div ng-if="sess.currentUser">
-            Welcome: {{sess.currentUser}}!
-          </div>
-        </div>
-      </div> <!-- /.session-login -->
-
-      <!-- games controller -->
-      <div ng-controller="GamesController as gameCon">
-        <!-- game view(all) section -->
-        <div class="game-view-all" id="game-view-all">
-          <div>
-            <h1>game view(all)</h1>
-          </div>
-          <!-- all gamess -->
-          <ul>
-            <li ng-repeat="games in gameCon.allGames">
-              {{games.title}}
-            </li>
-          </ul>
-        </div> <!-- /.game-view-all -->
-
-        <!-- game view(single) / comment / like section -->
-        <div class="game-view" id="game-view">
-          <div>
-            <h1>game view(single)</h1>
-          </div>
-          <!-- title -->
-          <div>
-            <h1>game title here</h1>
-          </div>
-          <!-- username -->
-          <div>
-            <h4>added by</h4>
-            <p>username</p>
-          </div>
-          <!-- release date -->
-          <div>
-            <p>game release date</p>
-          </div>
-          <!-- genre -->
-          <div>
-            <p>game genre</p>
-          </div>
-          <!-- image -->
-          <div>
-            <p>game image</p>
-          </div>
-          <!-- description -->
-          <div>
-            <p>game description</p>
-          </div>
-          <!-- user added comments -->
-          <div>
-            <p>user added comments 1</p>
-            <p>user added comments 2</p>
-            <p>user added comments 3</p>
-          </div>
-          <form ng-submit="gameCon.comment()">
-            <!-- comments -->
-            <div>
-              <textarea rows="8" cols="80"></textarea>
-            </div>
-            <!-- submit button -->
-            <button type="submit">submit</button>
-          </form>
-        </div> <!-- /.game-view -->
-
-        <!-- user view -->
-        <div class="user-view" id="user-view">
-          <div>
-            <h1>user profile page</h1>
-          </div>
-          <!-- user added/created games -->
-          <ul>
-            <li ng-repeat="games in gameCon.userCreatedGames">
-              <span ng-click="(gameCon.indexOfShow === $index) ? gameCon.indexOfShow = null : gameCon.indexOfShow = $index">{{games.title}}</span>
-              <span>
-                <a ng-click="(gameCon.indexOfShow === $index) ? gameCon.indexOfShow = null : gameCon.indexOfShow = $index">
-                  <i class="fas fa-eye"></i>
-                </a>
-                <!-- edit button
-                when clicked, only show edit view of selected game -->
-                <a ng-click="(gameCon.indexOfEditToShow === $index) ? gameCon.indexOfEditToShow = null : gameCon.indexOfEditToShow = $index">
-                  <i class="fas fa-edit"></i>
-                </a>
-                <!-- delete button -->
-                <a ng-click="gameCon.deleteUserCreatedGame(games._id)">
-                  <i class="fas fa-trash-alt"></i>
-                </a>
-              </span>
-            </li>
-          </ul>
-        </div> <!-- /.user-view -->
-
-        <!-- game add -->
-        <div class="game-create" id="game-create">
-          <div>
-            <div>
-              <h1>add game</h1>
-            </div>
-            <form ng-submit="gameCon.create()">
-              <!-- uuid -->
-              <div>
-                <input name="username" ng-model="sess.currentUser" placeholder="{{sess.currentUser}}" type="text" readonly>
-              </div>
-              <!-- title -->
-              <div>
-                <input ng-model="gameCon.createForm.title" autocomplete="off" maxlength="50" minlength="2" placeholder="game title" type="text" required>
-              </div>
-              <!-- release date -->
-              <div>
-                <input ng-model="gameCon.createForm.releaseDate" autocomplete="off" placeholder="release date" type="date" required>
-              </div>
-              <!-- genre -->
-              <!-- NOTE change to dropdown selection menu? -->
-              <div>
-                <input ng-model="gameCon.createForm.genre" autocomplete="off" maxlength="50" minlength="2" placeholder="genre" type="text" required>
-              </div>
-              <!-- image -->
-              <div>
-                <input ng-model="gameCon.createForm.image" autocomplete="off" maxlength="100" minlength="5" placeholder="image url" type="url" required>
-              </div>
-              <!-- description -->
-              <div>
-                <input ng-model="gameCon.createForm.description" autocomplete="off" maxlength="30" minlength="2" placeholder="description" type="text" required>
-              </div>
-              <!-- submit button -->
-              <button type="submit">submit</button>
-            </form>
-          </div>
-        </div> <!-- /.game-create -->
-
-        <!-- game edit -->
-        <div class="game-edit" id="game-edit">
-          <div>
-            <h1>edit game</h1>
-          </div>
-          <form ng-submit="gameCon.edit()">
-            <!-- uuid -->
-            <div>
-              <input name="username" ng-model="sess.currentUser" placeholder="{{sess.currentUser}}" type="text" readonly>
-            </div>
-            <!-- title -->
-            <div>
-              <input ng-model="gameCon.createForm.title" autocomplete="off" maxlength="50" minlength="2" placeholder="game title" type="text" required>
-            </div>
-            <!-- release date -->
-            <div>
-              <input ng-model="gameCon.createForm.releaseDate" autocomplete="off" placeholder="release date" type="date" required>
-            </div>
-            <!-- genre -->
-            <!-- NOTE change to dropdown selection menu? -->
-            <div>
-              <input ng-model="gameCon.createForm.genre" autocomplete="off" maxlength="50" minlength="2" placeholder="genre" type="text" required>
-            </div>
-            <!-- image -->
-            <div>
-              <input ng-model="gameCon.createForm.image" autocomplete="off" maxlength="100" minlength="5" placeholder="image url" type="url" required>
-            </div>
-            <!-- description -->
-            <div>
-              <input ng-model="gameCon.createForm.description" autocomplete="off" maxlength="30" minlength="2" placeholder="description" type="text" required>
-            </div>
-            <!-- submit button -->
-            <button type="submit">submit</button>
-          </form>
-        </div> <!-- /.game-edit -->
-      </div> <!-- / games controller -->
-
-      <!-- about -->
-      <div class="about" id="about">
-        <h1>about</h1>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-
-      <!-- contact -->
-      <div class="contact" id="contact">
-        <div>
-          <h1>contact</h1>
-          <p>test contact form</p>
-        </div>
-        <form>
-          <!-- first name -->
-          <div>
-            <input ng-model="sess.signupForm.firstname" autocomplete="off" maxlength="30" minlength="2" placeholder="first name" type="text" required>
-          </div>
-          <!-- last name -->
-          <div>
-            <input ng-model="sess.signupForm.lastname" autocomplete="off" maxlength="30" minlength="2" placeholder="last name" type="text" required>
-          </div>
-          <!-- email -->
-          <div>
-            <input ng-model="sess.signupForm.email" autocomplete="off" maxlength="50" minlength="5" placeholder="email address" type="email" required>
-          </div>
-          <!-- message -->
-          <div>
-            <textarea rows="8" cols="80"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">contact</button>
-        </form>
-      </div> <!-- /.contact -->
+      <!-- Dynamically change includes -->
+      <div ng-include="inc.includePath"></div>
 
       <!-- footer -->
       <div class="footer" id="footer">
