changed controller name in app.js, moved all functions and variable into one controller

--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl" crossorigin="anonymous"></script>
   </head>
 
-  <body ng-controller="IncludesController as inc">
-    <div ng-controller="SessionsController as sess" class="main">
+  <body ng-controller="MainController as main">
+    <div class="main">
       <!-- navigation include -->
       <div ng-include="'partials/nav.html'"></div>
       <!-- Dynamically change includes -->
-      <div ng-include="inc.includePath"></div>
+      <div ng-include="main.includePath"></div>
 
       <!-- footer -->
       <div class="footer" id="footer">
