fixed style for footer.html

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <!-- navigation include -->
       <div ng-include="'partials/nav.html'"></div>
       <!-- Dynamically change includes -->
-      <div ng-include="main.includePath"></div>
+      <div ng-include="main.includePath" autoscroll="true"></div>
       <!-- navigation include -->
       <div ng-include="'partials/footer.html'"></div>
     </div> <!-- /.main -->
