update mongoose and set default node version

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       <div ng-include="'partials/nav.html'"></div>
       <!-- Dynamically change includes -->
       <div ng-include="main.includePath" autoscroll="true"></div>
-      <!-- navigation include -->
+      <!-- footer include -->
       <div ng-include="'partials/footer.html'"></div>
     </div> <!-- /.main -->
 
